--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   # image_picker:
   #play animation 
   lottie:
+  #Restart application
+  flutter_phoenix: ^1.0.0
+  #responsive 
+  flutter_screenutil:
 
 dev_dependencies:
   flutter_test:
